Add connection pooling for Default Http Client (#39229)